Issue #52: inline editing of properties, like iOS.
Lots of code changes:
 - new PropertyEdit control.  Encapsulates editing, press-to-make-favorite, and tap-to-toast description
 - Reworked ActViewProperties to use an expandablelist (no longer uses SimpleExpandableListAdapter)  Actually ended up cleaning things up quite a bit.

--- a/app/src/main/res/layout-land/newflight.xml
+++ b/app/src/main/res/layout-land/newflight.xml
@@ -729,6 +729,7 @@
                 android:id="@+id/tblPinnedProperties"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:stretchColumns="0"
                 android:padding="4dp" />
             <Button
                 android:id="@+id/btnProps"
