--- a/app/src/main/res/layout/cptitem.xml
+++ b/app/src/main/res/layout/cptitem.xml
@@ -1,59 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="10dp">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:id="@+id/imgFavorite"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_action_important"
-        android:contentDescription="@string/strEmpty"
-        />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/txtName"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_weight="1"
-                android:padding="4dp"
-                android:textAlignment="gravity"
-                android:text=""
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/txtValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:padding="4dp"
-                android:textAlignment="gravity"
-                android:text=""
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/txtCPTDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:textAlignment="textStart"
-            android:text="" />
-    </LinearLayout>
-
-
-</LinearLayout>
+<com.myflightbook.android.PropertyEdit  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/propEdit"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" />
