--- a/app/src/main/res/layout/expandablelist.xml
+++ b/app/src/main/res/layout/expandablelist.xml
@@ -6,6 +6,7 @@
 
     <ExpandableListView
         android:id="@id/android:list"
+        android:descendantFocusability="afterDescendants"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 </LinearLayout>
