--- a/app/src/main/res/layout/cpttableitem.xml
+++ b/app/src/main/res/layout/cpttableitem.xml
@@ -2,39 +2,11 @@
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:clickable="true"
-    android:padding="4dp">
+    android:clickable="true">
 
-    <ImageView
-        android:id="@+id/imgFavorite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_action_important"
-        android:contentDescription="@string/strEmpty"
-        android:visibility="invisible" />
+    <com.myflightbook.android.PropertyEdit
+        android:id="@+id/propEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/txtName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_gravity="center_vertical|start"
-        android:textAlignment="textStart"
-        android:padding="4dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/txtValue"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_gravity="center_vertical|end"
-        android:padding="4dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/txtHdnPropTypeID"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
 </TableRow>
