--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,4 +4,5 @@
         <attr name="EditMode" format="string" />
         <attr name="ForceMode" format="boolean" />
     </declare-styleable>
+    <declare-styleable name="PropertyEdit" />
 </resources>
