Issue #6 - search for properties Real-time filtering as you type.

--- a/app/src/main/res/layout/expandablelist.xml
+++ b/app/src/main/res/layout/expandablelist.xml
@@ -3,6 +3,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableEnd="@drawable/ic_action_search_dark"
+        android:id="@+id/txtSearchProp"
+        />
 
     <ExpandableListView
         android:id="@id/android:list"
