Much cleaner look for "Date buttons" - buttons that had been used to set a date.  Now using TextViews, styled from a theme.  Much cleaner.

--- a/app/src/main/res/layout-land/flightquery.xml
+++ b/app/src/main/res/layout-land/flightquery.xml
@@ -93,14 +93,17 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dip"
+                android:layout_gravity="center_vertical"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:text="@string/fqDateStartDate" />
 
-                <Button
+                <TextView
+                    style="@style/DateButton"
                     android:id="@+id/btnfqDateStart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -109,9 +112,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:text="@string/fqDateEndDate" />
 
-                <Button
+                <TextView
+                    style="@style/DateButton"
                     android:id="@+id/btnfqDateEnd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
