--- a/app/src/main/res/layout/propertyedit.xml
+++ b/app/src/main/res/layout/propertyedit.xml
@@ -5,7 +5,9 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:orientation="horizontal"
-    android:padding="4dp"
+    android:padding="4dip"
+    android:layout_margin="4dip"
+    android:background="@drawable/shadowcard"
     android:focusable="true">
 
     <ImageView
