Issue#43: Repeat and Repeat + Reverse flights.  - KSoap is remarkably difficult to use to serialize/deserialize for a quick clone, so I did a hack and read it out of the database.  Cloning Flight Property directly, though, is much easier (many fewer fields), so I just did that.  - Cleaned up a ton of other warnings/lint items in the process.

--- a/app/src/main/res/menu/mfbexistingflightmenu.xml
+++ b/app/src/main/res/menu/mfbexistingflightmenu.xml
@@ -6,6 +6,10 @@
         android:showAsAction="ifRoom"
         android:title="@string/menuDeleteFlight" />
     <item
+        android:id="@+id/menuSignFlight"
+        android:showAsAction="always"
+        android:title="@string/menuSignFlight" />
+    <item
         android:id="@+id/btnUpdateFlight"
         android:showAsAction="ifRoom"
         android:title="@string/menuUpdateFlight" />
@@ -28,7 +32,11 @@
         android:title="@string/menuChoosePicture"
         android:titleCondensed="@string/menuChoosePictureShort" />
     <item
-        android:id="@+id/menuSignFlight"
-        android:showAsAction="always"
-        android:title="@string/menuSignFlight" />
+        android:id="@+id/menuRepeatFlight"
+        android:title="@string/menuRepeatFlight"
+        android:titleCondensed="@string/menuRepeatShort" />
+    <item
+        android:id="@+id/menuReverseFlight"
+        android:title="@string/menuRepeatReverseFlight"
+        android:titleCondensed="@string/menuReverseShort" />
 </menu>
