--- a/app/src/main/res/layout/imageitem.xml
+++ b/app/src/main/res/layout/imageitem.xml
@@ -5,7 +5,8 @@
     android:clickable="true"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:focusable="true">
 
     <ImageView
         android:id="@+id/imageItemView"
