--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -42,6 +42,7 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">16sp</item>
         <item name="android:padding">5dip</item>
+        <item name="android:layout_marginBottom">2dip</item>
     </style>
 
     <style name="DateButton">
